apps/site/web/static/css/_stop-bubbles.scss
$location-line-width: $space-6;

@mixin stop-bubble-mode-color($class, $color) {
// scss-lint:disable NestingDepth
// scss-lint:disable SelectorDepth
// Changes the color for the stop bubble based on the route type
  .route-branch-stop-list,
  .stop-features-list,
  .schedule-trip-info,
  .schedule-v2-timetable {
    &#{$class} {
      .icon-boring,
      .icon-inverse,
      .stop-bubble-stop,
      .stop-bubble-terminus {
        circle {
          fill: $white;
          stroke: $color;
          stroke-width: $space-2;
        }
      }

      .icon-inverse,
      .stop-bubble-terminus {
        circle {
          fill: $color;
        }
      }

      .route-branch-stop-bubble-line:not(.dotted),
      .route-branch-indent-start {
        background-color: $color;
      }

      .route-branch-stop-bubble-line.dotted {
        outline-color: $color;
      }

      .route-branch-indent-start.dotted {
        background-color: transparent;
        border-color: $color;
      }


      .stop-bubble::before {
        border-left-color: $color;
      }
    }
  }
}

.route-branch-stop-list {
  .route-branch-stop:last-child {
    .route-branch-stop-info {
      border-bottom-width: 0;
    }
  }
}

.trip-info-labels {
  .route-branch-stop-info {
    border-bottom-width: 0;
    padding-bottom: 0;
    padding-top: $base-spacing;
  }
}

.route-branch-stop {
  align-items: stretch;
  display: flex;
  flex: 1 1 0%;
  overflow: hidden; // IE10 hack -- unless overflow:hidden is set, a gap appears in the line
                    // when you hover over one of the links or the icons. No idea why. -kh
  width: 100%;
}

.route-branch-stop-bubbles {
  // scss-lint:disable DuplicateProperty
  align-items: stretch;
  display: inline-block; // for non-flex browsers
  display: flex;
  flex: 0 0 auto;
  justify-content: flex-start;
  padding-right: $base-spacing;

  .merge:last-child {
    margin-top: $base-spacing / 2;
  }
}

.route-branch-stop-bubble {
  // scss-lint:disable DuplicateProperty
  align-items: center;
  display: inline-block;
  display: flex;
  flex-direction: column;
  position: relative;
  width: $icon-size;

  &.stop {
    margin-top: -1px;
  }

  .route-branch-indent-start {
    height: $location-line-width;
    left: -5px;
    position: relative;
    top: 0;
    width: 16px;

    .solid {
      height: $location-line-width;
    }

    &.dotted {
      border-style: dashed;
      border-width: 1px;
      height: 0;
      outline-style: none;
      width: 12px;
    }
  }

  .dotted {
    background-color: transparent;
    outline-style: dashed;
    outline-width: 1px;
  }


  svg {
    overflow: visible;
  }

  text {
    font-weight: bold;
  }

  .stop-bubble-terminus {
    text {
      fill: $white;
    }
  }
}

.route-branch-stop-bubble-line {
  // scss-lint:disable DuplicateProperty
  display: none; // hide on non-flex browsers
  display: flex;
  flex: 1 0 0%;
  min-height: 1rem;
  width: $location-line-width;

  &.dotted {
    width: 0;
  }
}

.route-branch-stop-info {
  // scss-lint:disable DuplicateProperty
  border-bottom: $border;
  display: inline-block; // for non-flex browsers
  display: flex;
  flex: 1 1 0%;
  flex-direction: column;
  margin-bottom: $base-spacing;
  padding-bottom: $base-spacing;
  width: 60%; // for non-flex browsers

  &.expand {
    border-bottom: 0;
    padding-bottom: 0;
  }
}

@include media-breakpoint-down(sm) {
  .green-line {
    .route-branch-stop-icons {
      display: block;
      padding-bottom: $base-spacing / 2;
    }
  }
}

.expand-branch-link {
  a {
    background: $gray-lightest;
    border-radius: $border-radius;
    display: inline-block;
    padding: $base-spacing / 2;
  }
}

@include media-breakpoint-only(xs) {
  .route-branch-stop-link {
    display: block;
  }
}

.trip-info-stop-name-times {
  display: flex;
  flex-wrap: wrap;
}

.trip-info-name {
  display: inline-block; // for non-flex browsers
  flex: 1 1 0%;
  min-width: 50%;
  padding-right: $base-spacing;
}

.trip-info-time {
  display: inline-block; // for non-flex browsers
  float: right; // for non-flex browsers
  width: $base-spacing * 4.5;
}

.route-branch-stop-name-icons,
.route-branch-stop-links {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;

  > div {
    display: inline-block;
    flex: 1 1 0%;
  }

  .route-branch-stop-icons {
    display: flex;
    flex: 0 0 auto;
    text-align: right;

    svg {
      // required for icons to be displayed on IE 10+
      flex: 0 0 auto;
      margin-left: $base-spacing / 8;
    }
  }
}

.stop-info-link {
  padding-right: $base-spacing;
}

.route-branch-stop-link {
  display: inline-block;
}

@include media-breakpoint-only(xs) {
  .schedule-link {
    float: right;
  }
}

.route-branch-stop-zone {
  margin-bottom: $base-spacing / 4;
  margin-top: $base-spacing / 4;
}

@include stop-bubble-mode-color(".commuter-rail", $brand-commuter-rail);
@include stop-bubble-mode-color(".red-line", $brand-red-line);
@include stop-bubble-mode-color(".mattapan-trolley", $brand-red-line);
@include stop-bubble-mode-color(".blue-line", $brand-blue-line);
@include stop-bubble-mode-color(".orange-line", $brand-orange-line);
@include stop-bubble-mode-color(".green-line", $brand-green-line);
@include stop-bubble-mode-color(".bus", $brand-bus);
@include stop-bubble-mode-color(".ferry", $brand-ferry);

